# Toy_VM

./: README.md
toy-vm/: README.md  hello.tbc  pyproject.toml
toy-vm/examples/: fib.toy  hello.toy
toy-vm/src/toyvm/: __init__.py  assembler.py  cli.py  vm.py
toy-vm/tests/: test_vm.py
